--- a/.github/workflows/backfill.yml
+++ b/.github/workflows/backfill.yml
@@ -1,10 +1,26 @@
-name: Backfill (Sitemap + local fulltext)
+name: Backfill (chunked + resume)
 
 on:
+  # 每天一次自动滚动补历史（可保留，也可只手动触发）
+  schedule:
+    - cron: "40 0 * * *"   # 08:40 CST
   workflow_dispatch:
     inputs:
-      start_date: { description: "ISO start (default 2025-01-01T00:00:00Z)", required: false }
-      end_date:   { description: "ISO end (default now)", required: false }
+      start_date:
+        description: "ISO start (默认 2025-01-01T00:00:00Z)"
+        required: false
+      end_date:
+        description: "ISO end (默认现在)"
+        required: false
+      reset:
+        description: "重置进度: true/false"
+        required: false
+      max_months:
+        description: "每次处理月数(默认2)"
+        required: false
+      max_urls:
+        description: "每来源每月最多URL(默认150)"
+        required: false
 
 permissions:
   contents: write
@@ -16,20 +32,32 @@ concurrency:
 jobs:
   backfill:
     runs-on: ubuntu-latest
+    timeout-minutes: 18
     env:
       BACKFILL_START: ${{ inputs.start_date }}
       BACKFILL_END: ${{ inputs.end_date }}
+      MAX_MONTHS_PER_RUN: ${{ inputs.max_months }}
+      MAX_URLS_PER_SOURCE_PER_MONTH: ${{ inputs.max_urls }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Reset state if requested
+        if: ${{ inputs.reset == 'true' }}
+        run: |
+          rm -f docs/data/backfill_state.json || true
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: pip install -r requirements.txt
-      - name: Run backfill (module mode)
+
+      - name: Run backfill (chunked, module mode)
         run: python -m scripts.backfill
+
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "chore(backfill): add historical items"
+          commit_message: "chore(backfill): chunked resume"
           branch: main
